added anaconda test

--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -2,15 +2,16 @@ FROM nvidia/cuda:11.0.3-base-ubuntu20.04
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0"
 
-# remove python 2.7 and 3.5 from native installations
-RUN apt-get update && apt purge python2.7-minimal -y && apt purge python3-minimal -y && apt autoremove -y
-
 # install basics
-RUN apt-get update && apt-get install -y nano wget git sudo
+RUN apt-get update && apt-get install -y nano wget git sudo curl
+
+# install anaconda
+RUN cd /tmp && curl –O https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh && bash Anaconda3-2020.02-Linux-x86_64.sh
+
+
 
 # install dependencies
 COPY ["/src/*.yml", "/app/"]
-
 WORKDIR /app/
 RUN conda env create
 RUN activate pytorch-nst
