--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -6,7 +6,9 @@ LABEL version="1.0"
 RUN apt-get update && apt-get install -y nano wget git sudo curl
 
 # install anaconda
-RUN cd /tmp && curl –O https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh && bash Anaconda3-2020.02-Linux-x86_64.sh
+RUN cd /tmp
+RUN curl https://repo.anaconda.com/archive/Anaconda3-2021.11-Linux-x86_64.sh --output anaconda.sh
+RUN bash anaconda.sh
 
 
 
