--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -1,10 +1,24 @@
-FROM nvidia/cuda:11.0.3-base-ubuntu20.04
+FROM nvidia/cuda:11.3.1-base-ubuntu20.04
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0"
 
-# Install libs
-#RUN apt update && apt install -y libsm6 libxext6
-#RUN apt-get install -y libxrender-dev
+# Remove any third-party apt sources to avoid issues with expiring keys.
+RUN rm -f /etc/apt/sources.list.d/*.list
+
+# Install some basic utilities
+RUN apt-get update && apt-get install -y \
+    curl \
+    ca-certificates \
+    sudo \
+    git \
+    bzip2 \
+    libx11-6 \
+ && rm -rf /var/lib/apt/lists/*
+
+
+# Install libs for open cv
+RUN sudo apt-get update && sudo apt-get install -y libgl1-mesa-glx libgtk2.0-0 libsm6 libxext6 && sudo rm -rf /var/lib/apt/lists/*
+
 
 # Install basics
 RUN apt-get update && apt-get install -y nano wget curl
