--- a/docker/neural-style-transfer/env/environment.yml
+++ b/docker/neural-style-transfer/env/environment.yml
@@ -1,17 +1,21 @@
-name: base
+name: styletransfer
 channels:
   - defaults
-  - pytorch
+  - conda-forge
 dependencies:
-  - python=3.7.6
-  - pip=20.0.2
-  - matplotlib=3.1.3
-  - pytorch==1.5.0
-  - torchvision=0.6.0
+  - python=3.6
+  - pip
+  - numpy
+  - pillow
+  - matplotlib
+  - protobuf
+  - tqdm
+
   - pip:
-    - numpy==1.18.1
-    - opencv-python==4.2.0.32
-    - piexif==1.1.3
+    - torch
+    - torchvision
+    - opencv-python
+    - piexif
     - azure-storage-queue
     - azure-storage-blob
     - applicationinsights
