--- a/docker/neural-style-transfer/env/environment.yml
+++ b/docker/neural-style-transfer/env/environment.yml
@@ -1,21 +1,17 @@
-name: styletransfer
+name: base
 channels:
   - defaults
-  - conda-forge
+  - pytorch
 dependencies:
-  - python=3.6
-  - pip
-  - numpy
-  - pillow
-  - matplotlib
-  - protobuf
-  - tqdm
-
+  - python=3.7.6
+  - pip=20.0.2
+  - matplotlib=3.1.3
+  - pytorch==1.5.0
+  - torchvision=0.6.0
   - pip:
-    - torch
-    - torchvision
-    - opencv-python
-    - piexif
+    - numpy==1.18.1
+    - opencv-python==4.2.0.32
+    - piexif==1.1.3
     - azure-storage-queue
     - azure-storage-blob
     - applicationinsights
