--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -5,6 +5,9 @@ LABEL version="1.0"
 # Install basics
 RUN sudo apt-get update && sudo apt-get install -y nano wget curl
 
+ENV TZ=Europe/Berlin
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 # Install OpenCV
 RUN sudo apt-get install python3-opencv -y
 
