--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -5,15 +5,16 @@ LABEL version="1.0"
 # Install basics
 RUN sudo apt-get update && sudo apt-get install -y nano wget curl
 
-# Install Timezone
+# Install Timezone Silent
+# https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
 RUN sudo DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
-# Install OpenCV
+# Install OpenCV (tzdata needs to be installed -> otherwise a prompt shows up)
 RUN sudo apt-get install python3-opencv -y
 
 WORKDIR /env/
 COPY ["/env/environment.yml", "/env/"]
-RUN conda env update
+RUN sudo conda env update
 
 # Copy the neural style files (modified) -> this is why we are not cloning the orignal github files
 WORKDIR /app/
