--- a/docker/neural-style-transfer/env/environment.yml
+++ b/docker/neural-style-transfer/env/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - matplotlib=3.1.3
   - pip:
+    - opencv
     - piexif==1.1.3
     - azure-storage-queue
     - azure-storage-blob
