--- a/src/NeuralStyle.Core/NeuralStyle.Core.csproj
+++ b/src/NeuralStyle.Core/NeuralStyle.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Cloud\Factory.cs" />
     <Compile Include="EnumExtensions.cs" />
     <Compile Include="Features\CreateMiningMetaData.cs" />
+    <Compile Include="Features\CreateSeries.cs" />
     <Compile Include="Features\Templating.cs" />
     <Compile Include="Imaging\ExifAdapter.cs" />
     <Compile Include="Features\CreateJobs.cs" />
@@ -95,6 +96,9 @@
     </PackageReference>
     <PackageReference Include="ExifLib">
       <Version>1.7.0</Version>
+    </PackageReference>
+    <PackageReference Include="FFMpegCore">
+      <Version>4.8.0</Version>
     </PackageReference>
     <PackageReference Include="InstagramApiSharp">
       <Version>1.7.2</Version>
