--- a/docker/3d-photo-stylization/Dockerfile
+++ b/docker/3d-photo-stylization/Dockerfile
@@ -5,8 +5,8 @@ LABEL version="1.0.0"
 # update basic os
 RUN apt-get update && apt-get install -y nano wget git sudo
 
-RUN sudo apt install g++
-RUN sudo apt install build-essential
+RUN sudo apt install -y g++
+RUN sudo apt install -y build-essential
 
 # dependecies for python libs (ssl)
 # RUN apt-get -y install libffi-dev libssl-dev libxml2-dev libxslt1-dev libjpeg8-dev zlib1g-dev 
