update to develop

--- a/docker/3d-photo-stylization/Dockerfile
+++ b/docker/3d-photo-stylization/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:11.0.3-runtime-ubuntu18.04
+FROM nvidia/cuda:11.0.3-devel-ubuntu18.04
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0.0"
 
