--- a/docker/3d-photo-stylization/Dockerfile
+++ b/docker/3d-photo-stylization/Dockerfile
@@ -28,4 +28,12 @@ RUN conda install -y -c anaconda scipy pyyaml
 RUN conda install -y -c conda-forge tensorboard tensorboardx ffmpeg imageio imageio-ffmpeg plyfile matplotlib
 RUN conda install -y -c open3d-admin open3d
 
+# Needed requirements
+RUN pip install lpips
+
+WORKDIR /3d_photo_stylization/
+# Compile libs
+RUN python setup_render.py build_ext --inplace
+RUN python setup_pointnet2.py build_ext --inplace
+
 
