--- a/docker/neural-style-pytorch/Dockerfile
+++ b/docker/neural-style-pytorch/Dockerfile
@@ -8,13 +8,14 @@ RUN apt-get update && apt-get install -y nano wget git sudo
 
 # Install miniconda with python 3.6
 # export PATH="~/miniconda/bin:$PATH"
-RUN wget --progress=bar:force https://repo.anaconda.com/miniconda/Miniconda3-4.3.11-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p /root/miniconda && rm ~/miniconda.sh
+RUN wget --progress=bar:force https://repo.anaconda.com/miniconda/Miniconda3-py37_4.9.2-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p /root/miniconda && rm ~/miniconda.sh
 ENV PATH /root/miniconda/bin:$PATH
 
 # Clone Repo
 RUN git clone https://github.com/sbetzin/style-transfer-pytorch
 
 # Install python libs
+RUN conda install -y python=3.6
 RUN conda install -y -c pytorch pytorch==1.7.1 torchvision==0.8.2
 RUN conda install -y tqdm=4.46.0 tifffile=2020.10.1 aiohttp=3.7.4 ipython-7.16.1
 
