added variable for author

--- a/docker/3d-photo-inpainting/Makefile
+++ b/docker/3d-photo-inpainting/Makefile
@@ -1,15 +1,16 @@
 .PHONY: all build rebuild clean start stop restart logs pull console-start console-stop console-logs prune
-IMGNAME=sbetzin/3d-photo-inpainting
+IMGAUTHOR=sbetzin
+IMGNAME=3d-photo-inpainting
 IMGTAG=1.0.0
 	
 build:
-	nvidia-docker build -f Dockerfile -t $(IMGNAME):$(IMGTAG) .
+	nvidia-docker build -f Dockerfile -t $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG) .
 
 clean:
-	docker rmi $(IMGNAME):$(IMGTAG)
+	docker rmi $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
 
 start:
-	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) --restart=unless-stopped $(IMGNAME):$(IMGTAG)
+	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) --restart=unless-stopped $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
 
 stop:
 	nvidia-docker stop $(shell docker ps -q --filter "name=$(IMGNAME)")
@@ -25,7 +26,7 @@ prune:
 	docker container prune --force
 	
 start-console:
-	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) --entrypoint /bin/bash $(IMGNAME):$(IMGTAG)
+	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) --entrypoint /bin/bash $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
 
 stop-console:
 	nvidia-docker stop $(shell docker ps -q --filter "name$=(IMGNAME)-console")
