--- a/docker/3d-photo-inpainting/env/environment.yml
+++ b/docker/3d-photo-inpainting/env/environment.yml
@@ -3,9 +3,14 @@ channels:
   - defaults
   - pytorch
 dependencies:
-  - matplotlib=3.1.3
+  - pytorch==1.4.0
+  - torchvision==0.5.0 
   - pip:
     - opencv-python==4.2.0.32
+    - vispy==0.6.4
+    - moviepy==1.0.2
+    - transforms3d==0.3.1
+    - networkx==2.3
     - piexif==1.1.3
     - azure-storage-queue
     - azure-storage-blob
