--- a/docker/3d-photo-inpainting/env/environment.yml
+++ b/docker/3d-photo-inpainting/env/environment.yml
@@ -10,7 +10,8 @@ dependencies:
   - torchvision==0.5.0 
   - scipy==1.7.3
   - pyyaml==3.13
-  - matplotlib=3.2.2
+  - matplotlib==3.2.2
+  - scikit-image==0.18.3
   - pip:
     - opencv-python==4.2.0.32
     - vispy==0.6.4
