changed progress bar

--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -36,15 +36,17 @@ RUN git clone https://github.com/compphoto/BoostingMonocularDepth.git
 RUN mkdir -p BoostingMonocularDepth/pix2pix/checkpoints/mergemodel/
 
 WORKDIR /home/3d-photo-inpainting/checkpoints
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/color-model.pth
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/depth-model.pth
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/edge-model.pth
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/color-model.pth
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/depth-model.pth
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/edge-model.pth
 
 WORKDIR /home/3d-photo-inpainting/MiDaS
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/model.pt
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/model.pt
 
 WORKDIR /home/3d-photo-inpainting/BoostingMonocularDepth/pix2pix/checkpoints/mergemodel/
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/latest_net_G.pth
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/latest_net_G.pth
 
 WORKDIR /home/3d-photo-inpainting/BoostingMonocularDepth/BoostingMonocularDepth/midas
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/model-f46da743.pt -O model.pt
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/3d-photo-inpainting/model-f46da743.pt -O model.pt
+
+WORKDIR /home/3d-photo-inpainting
