--- a/docker/neural-style-transfer/env/environment.yml
+++ b/docker/neural-style-transfer/env/environment.yml
@@ -3,7 +3,7 @@ channels:
   - defaults
   - pytorch
 dependencies:
-  - matplotlib=3.1.3
+  - matplotlib
   - pip:
     - opencv-python==4.2.0.32
     - piexif==1.1.3
