--- a/docker/neural-style-transfer/env/environment.yml
+++ b/docker/neural-style-transfer/env/environment.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - matplotlib
   - pip:
-    - opencv-python==4.2.0.32
+    - opencv-python
     - piexif==1.1.3
     - azure-storage-queue
     - azure-storage-blob
