--- a/docker/neural-style-transfer/env/environment.yml
+++ b/docker/neural-style-transfer/env/environment.yml
@@ -3,9 +3,9 @@ channels:
   - defaults
   - pytorch
 dependencies:
-  - matplotlib
+  - matplotlib=3.1.3
   - pip:
-    - opencv-python
+    - opencv-python==4.2.0.32
     - piexif==1.1.3
     - azure-storage-queue
     - azure-storage-blob
