--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -57,7 +57,7 @@ RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/mod
 WORKDIR /home
 RUN mkdir -p image
 WORKDIR /home/image
-RUN wget -progress=bar:force https://neuralstylefiles.blob.core.windows.net/images/close_up_01.jpg
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/images/close_up_01.jpg
 
 
 WORKDIR /home/3d-photo-inpainting
