--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -59,5 +59,6 @@ RUN mkdir -p image
 WORKDIR /home/image
 RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/images/close_up_01.jpg
 
+RUN apt-get update && apt-get upgrade -y
 
 WORKDIR /home/3d-photo-inpainting
