--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -5,17 +5,18 @@ LABEL version="1.0.0"
 # https://hub.docker.com/r/nvidia/cuda/tags?page=1&name=11.0
 
 # update basic os
-RUN apt-get update && apt-get install -y nano wget git sudo sed
+RUN sudo apt-get update
+RUN sudo apt-get install -y nano wget git sudo sed
 
 # Install Timezone Silent
 # https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
 # added needed os basics for 
-RUN apt-get install -y pkg-config libfontconfig1-dev libsm6 libxext6 libxrender-dev
+RUN sudo apt-get install -y pkg-config libfontconfig1-dev libsm6 libxext6 libxrender-dev
 
 # Installing EGL 
-RUN  apt-get install -y --no-install-recommends libegl1-mesa libgles2-mesa libx11-xcb1 libegl1-mesa-dev
+RUN  sudo apt-get install -y --no-install-recommends libegl1-mesa libgles2-mesa libx11-xcb1 libegl1-mesa-dev
 
 # Install miniconda
 # export PATH="~/miniconda/bin:$PATH"
