--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -1,22 +1,23 @@
 FROM anibali/pytorch:1.8.1-cuda11.1
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0.0"
+USER root
 
 # https://hub.docker.com/r/nvidia/cuda/tags?page=1&name=11.0
 
 # update basic os
-RUN sudo apt-get update
-RUN sudo apt-get install -y nano wget git sudo sed
+RUN apt-get update
+RUN apt-get install -y nano wget git sudo sed
 
 # Install Timezone Silent
 # https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
-RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC sudo apt-get -y install tzdata
+RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
 # added needed os basics for 
-RUN sudo apt-get install -y pkg-config libfontconfig1-dev libsm6 libxext6 libxrender-dev
+RUN apt-get install -y pkg-config libfontconfig1-dev libsm6 libxext6 libxrender-dev
 
 # Installing EGL 
-RUN  sudo apt-get install -y --no-install-recommends libegl1-mesa libgles2-mesa libx11-xcb1 libegl1-mesa-dev
+RUN apt-get install -y --no-install-recommends libegl1-mesa libgles2-mesa libx11-xcb1 libegl1-mesa-dev
 
 # Install miniconda
 # export PATH="~/miniconda/bin:$PATH"
