--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -1,4 +1,4 @@
-FROM anibali/pytorch:1.8.1-cuda11.1
+FROM nvidia/cudagl:11.1.1-runtime-ubuntu20.04
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0.0"
 USER root
@@ -7,17 +7,17 @@ USER root
 
 # update basic os
 RUN apt-get update
-RUN apt-get install -y nano wget git sudo sed
+RUN apt-get install -y nano wget git sudo
 
 # Install Timezone Silent
 # https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
 # added needed os basics for 
-RUN apt-get install -y pkg-config libfontconfig1-dev libsm6 libxext6 libxrender-dev
+#RUN apt-get install -y pkg-config libfontconfig1-dev libsm6 libxext6 libxrender-dev
 
 # Installing EGL 
-RUN apt-get install -y --no-install-recommends libegl1-mesa libgles2-mesa libx11-xcb1 libegl1-mesa-dev
+#RUN apt-get install -y --no-install-recommends libegl1-mesa libgles2-mesa libx11-xcb1 libegl1-mesa-dev
 
 # Install miniconda
 # export PATH="~/miniconda/bin:$PATH"
