--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -21,16 +21,15 @@ RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
 # Install miniconda
 # export PATH="~/miniconda/bin:$PATH"
-RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-py37_4.12.0-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p /root/miniconda && rm ~/miniconda.sh
-ENV PATH /root/miniconda/bin:$PATH
+#RUN wget --progress=bar:force https://repo.continuum.io/miniconda/Miniconda3-py37_4.12.0-Linux-x86_64.sh -O ~/miniconda.sh && sh ~/miniconda.sh -b -p /root/miniconda && rm ~/miniconda.sh
+#ENV PATH /root/miniconda/bin:$PATH
 
-COPY ["/env/environment.yml", "/env/"]
-RUN chmod 777 /env/
+#COPY ["/env/environment.yml", "/env/"]
+#RUN chmod 777 /env/
 
-WORKDIR /env/
-RUN conda env update --file environment.yml
+#WORKDIR /env/
+#RUN conda env update --file environment.yml
 
-WORKDIR /home/
 WORKDIR /home/
 # Clone Repo
 RUN git clone https://github.com/sbetzin/3d-photo-inpainting
