--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -3,10 +3,14 @@ LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0.1"
 USER root
 
-
-
 # update basic os
-RUN apt-get update && apt-get upgrade -y && apt-get install -y nano wget git sudo libglib2.0-0 libsm6 libxrender1 libxext6 fontconfig
+RUN apt-get update && apt-get upgrade -y 
+
+# Install Timezone Silent
+# https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
+RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
+
+RUN apt-get install -y nano wget git sudo libglib2.0-0 libsm6 libxrender1 libxext6 fontconfig
 
 #Install Python and Add python alias for python3
 RUN apt-get install python3 pip -y && update-alternatives --install /usr/bin/python python /usr/bin/python3 1
@@ -14,11 +18,6 @@ RUN apt-get install python3 pip -y && update-alternatives --install /usr/bin/pyt
 #Install packages
 RUN pip install torch scipy pyyaml matplotlib scikit-image torchvision opencv-python vispy moviepy transforms3d networkx piexif azure-storage-queue azure-storage-blob applicationinsights
 RUN pip install numpy==1.22.2
-
-# Install Timezone Silent
-# https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
-
-#RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
 # Install miniconda
 # export PATH="~/miniconda/bin:$PATH"
