--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get upgrade -y
 # https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
-RUN apt-get install -y nano wget git sudo libglib2.0-0 libsm6 libxrender1 libxext6 fontconfig
+RUN apt-get install -y nano wget curl git sudo libglib2.0-0 libsm6 libxrender1 libxext6 fontconfig
 
 #Install Python and Add python alias for python3
 RUN apt-get install python3 pip -y && update-alternatives --install /usr/bin/python python /usr/bin/python3 1
